Edición de componentes footer y home

--- a/SPA2023/Frontend/truwebque/src/app/pages/home-component/home-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/home-component/home-component.component.html
@@ -1,6 +1,84 @@
-
 <app-carrusel-component></app-carrusel-component>
 
+<br>
+
+
+<section class="wrapper">
+  <div class="container-fostrap">
+      <div>
+          <h2 class="heading">
+              ¡Comenzá a intercambiar!
+          </h2>
+          <br>
+      </div>
+      <div class="content">
+          <div class="container">
+              <div class="row">
+                  <div class="col-xs-12 col-sm-4">
+                      <div class="card">
+                          <a class="img-card" href="">
+                          <img src="../../assets/electro.png" />
+                        </a>
+                          <div class="card-content" div style="text-align: center;">
+                              <h5 class="card-title">
+                                  <a href="">Electro
+                                </a>
+                              </h5>
+                             
+                          </div>
+                          <div class="card-read-more">
+                              <a href="" class="btn btn-link btn-block custom-link">
+                                  Ver más
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-4">
+                      <div class="card">
+                          <a class="img-card" href="">
+                          <img src="../../assets/objetos.png" />
+                        </a>
+                          <div class="card-content" div style="text-align: center">
+                              <h5 class="card-title">
+                                  <a href="">Objetos
+                                </a>
+                              </h5>
+                              
+                          </div>
+                          <div class="card-read-more">
+                              <a href="" class="btn btn-link btn-block custom-link">
+                                Ver más
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-4">
+                      <div class="card">
+                          <a class="img-card" href="">
+                          <img src="../../assets/ropa.png" />
+                        </a>
+                          <div class="card-content" div style="text-align: center">
+                              <h4 class="card-title">
+                                  <a href="">Ropa
+                                </a>
+                              </h4>
+                            
+                          </div>
+                          <div class="card-read-more">
+                              <a href="" class="btn btn-link btn-block custom-link">
+                                Ver más
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<hr class="featurette-divider">
+  
         <div class="row featurette">
           <div class="col-md-7 d-flex align-items-center justify-content-center flex-column " div style="text-align: center;" >
             <h2 class="featurette-heading">No tires lo que ya no te sirve<span class="text-muted">.</span></h2>
@@ -9,14 +87,15 @@
             </p>
           </div>
           <div class="col-md-5">
-
+            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" 
+              src="../../assets/trueque3.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
           </div>
         </div>
-
+  
         <hr class="featurette-divider">
-
+  
         <div class="row featurette">
           <div class="col-md-7 order-md-2 d-flex align-items-center justify-content-center flex-column" div style="text-align: center;">
             <h2 class="featurette-heading">Intercambia todo aquello que no usas<span class="text-muted">.</span></h2>
@@ -28,12 +107,12 @@
               src="../../assets/trueque1.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
-
+  
           </div>
         </div>
-
+  
         <hr class="featurette-divider">
-
+  
         <div class="row featurette">
           <div class="col-md-7 d-flex align-items-center justify-content-center flex-column" div style="text-align: center;">
             <h2 class="featurette-heading">Conectate con el mundo del trueque<span class="text-muted">.</span></h2>
@@ -45,9 +124,9 @@
               src="../../assets/trueque2.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
               aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
             <title>Placeholder</title>
-
+  
           </div>
         </div>
-
+  
         <hr class="featurette-divider">
-
+  
