--- a/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
@@ -1,65 +1,56 @@
-<div class="container my-5">
- 
-    <footer class="text-center text-white" style="background-color: #EF9708">
-     
-      <div class="container">
-        <section class="mt-5">
-          <div class="row text-center d-flex justify-content-center pt-5">
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="/ingresar" class="text-white" style="text-decoration: none;">Ingresar</a>
-              </h6>
-            </div>
-          
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="/publicaciones" class="text-white" style="text-decoration: none;">Publicaciones</a>
-              </h6>
-            </div>
-          
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold ">
-                <a href="/preguntasfrecuentes" class="text-white"style="text-decoration: none;">Quienes somos</a>
-              </h6>
-            </div>
-  
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="/preguntasfrecuentes" class="text-white" style="text-decoration: none;">Preguntas frecuentes</a>
-              </h6>
-            </div>
-  
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="/preguntasfrecuentes" class="text-white" style="text-decoration: none;">Términos y condiciones</a>
-              </h6>
-            </div>
-       
-          </div>
-        </section>
-        
-        <hr class="my-5" />
-        <section class="mb-3">
-          <div class="row d-flex justify-content-center">
-            <div class="col-lg-8">
-              <ul class="list-inline text-center">
-                <li class="list-inline-item mx-4"><a href="#"><i class="fab fa-facebook fa-3x"></i></a></li>
-                <li class="list-inline-item mx-4"><a href="#"><i class="fab fa-twitter fa-3x"></i></a></li>
-                <li class="list-inline-item mx-4"><a href="#"><i class="fab fa-instagram fa-3x"></i></a></li>
-                <li class="list-inline-item mx-4"><a href="#"><i class="fab fa-github fa-3x"></i></a></li>
-              </ul>
-            </div>
-          </div>
-        </section>
+<footer class="text-center text-white" style="background-color:darkgrey">
+  <div class="container-fluid">
+    <section class="mt-5">
+      <div class="row text-center d-flex justify-content-center pt-5">
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="/ingresar" class="text-black" style="text-decoration: none;">Ingresar</a>
+          </h6>
+        </div>
+
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="/publicaciones" class="text-black" style="text-decoration: none;">Publicaciones</a>
+          </h6>
+        </div>
+
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="/preguntasfrecuentes" class="text-black" style="text-decoration: none;">Quienes somos</a>
+          </h6>
+        </div>
+
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="/preguntasfrecuentes" class="text-black" style="text-decoration: none;">Preguntas frecuentes</a>
+          </h6>
+        </div>
+
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="/preguntasfrecuentes" class="text-black" style="text-decoration: none;">Términos y condiciones</a>
+          </h6>
+        </div>
       </div>
-  
-      <div
-           class="text-center p-3"
-           style="background-color: rgba(0, 0, 0, 0.2); text-size-adjust: 10px;"
-           >
-           <a href=""><p></p><strong>TRU</strong>w<strong>E</strong>b<strong>QUE</strong></a>
-        
+    </section>
+
+    <hr class="my-5" />
+
+    <section class="mb-3">
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-8">
+          <ul class="list-inline text-center">
+            <li class="list-inline-item mx-4"><a href="#"><i class="fab fa-facebook fa-3x"></i></a></li>
+            <li class="list-inline-item mx-4"><a href="#"><i class="fab fa-twitter fa-3x"></i></a></li>
+            <li class="list-inline-item mx-4"><a href="#"><i class="fab fa-instagram fa-3x"></i></a></li>
+            <li class="list-inline-item mx-4"><a href="#"><i class="fab fa-github fa-3x"></i></a></li>
+          </ul>
+        </div>
       </div>
-    </footer>
-  
+    </section>
   </div>
+
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); text-size-adjust: 10px;">
+    <a href=""><p></p><strong>TRU</strong>w<strong>E</strong>b<strong>QUE</strong></a>
+  </div>
+</footer>
