--- a/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
@@ -4,31 +4,32 @@
       <div class="row text-center d-flex justify-content-center pt-5">
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="/ingresar" class="text-black" style="text-decoration: none;">Ingresar</a>
+            <a class="text-black nav-link" [routerLink]="['/login']" style="text-decoration: none;">Ingresar</a>
+          </h6>
+        </div>
+
+
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a class="text-black nav-link" [routerLink]="['/publicaciones']" style="text-decoration: none;">Publicaciones</a>
           </h6>
         </div>
 
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="/publicaciones" class="text-black" style="text-decoration: none;">Publicaciones</a>
+            <a class="text-black  nav-link" [routerLink]="['/quienessomos']" style="text-decoration: none;">Quienes somos</a>
           </h6>
         </div>
 
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="/preguntasfrecuentes" class="text-black" style="text-decoration: none;">Quienes somos</a>
+            <a class="text-black nav-link" [routerLink]="['/preguntasfrecuentes']"style="text-decoration: none;">Preguntas frecuentes</a>
           </h6>
         </div>
 
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="/preguntasfrecuentes" class="text-black" style="text-decoration: none;">Preguntas frecuentes</a>
-          </h6>
-        </div>
-
-        <div class="col-md-2">
-          <h6 class="text-uppercase font-weight-bold">
-            <a href="/preguntasfrecuentes" class="text-black" style="text-decoration: none;">Términos y condiciones</a>
+            <a class="text-black nav-link" [routerLink]="['/tyc']" style="text-decoration: none;">Términos y condiciones</a>
           </h6>
         </div>
       </div>
