--- a/SPA2023/Frontend/truwebque/src/app/pages/preguntas-frecuentes-component/preguntas-frecuentes-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/preguntas-frecuentes-component/preguntas-frecuentes-component.component.html
@@ -1,11 +1,11 @@
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         Quienes somos
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <p>Buenas Internauta! Somos un Grupo de Estudiantes Del ISPC - Instituto Superior Politecnico Cordoba. 
           Entusiastas del Mundo de la informatica, Autodidactas y Amantes del Mundo Geek.</p>
@@ -51,11 +51,11 @@
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
         Preguntas Frecuentes
       </button>
     </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <p><strong>¿Cómo me contacto con la otra persona para realizar el trueque?</strong></p>
     
