Ruteo de los enlaces del menú. Excepto carrito y catergoria que van provisorios al home.

--- a/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
@@ -16,16 +16,16 @@
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Categorias</a>
+            <a class="nav-link" [routerLink]="['/categoria']">Categorías</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ingresar</a>
+            <a class="nav-link" [routerLink]="['/login']">Ingresar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/carrito">
+            <a class="nav-link" [routerLink]="['/']">Carrito
               <i class="fas fa-shopping-cart"></i>
             </a>
           </li>
