--- a/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.html
@@ -1,20 +1,28 @@
 
 <!-- formulario registro -->
-<form class="text-center border border-light p-5">
+<form class="text-center border border-light p-5" id="form-registro">
     <p class="h4 mb-4">Registro</p>
 
-    <div class="form-row mb-4">
-      <div class="col">
+    <div class="form-row mb-4" id="linea">
+      <div class="col-md-6">
         <!-- usuario -->
         <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="Usuario" required>
       </div>
 
-      <div class="col">
+      <div class="col-md-6">
         <!-- nombre -->
         <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Nombre" required>
       </div>
 
     </div>
+
+
+    <!-- <div class="form-row mb-5">
+      <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="Usuario" required>
+      <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Nombre" required>
+      
+
+    </div> -->
          
 
     <!-- mail -->
@@ -69,12 +77,14 @@
 
     <br>
       <!--  boton -->
-    <input type="submit" name="submit" class="btn btn-secondary btn-sm" block="true" value="Registrate!" />
-
+    <input type="submit" name="submit" class="btn btn-secondary btn-sm" block="true" value="Registrate!" id="form-btn" />
+     <hr>
     <!-- Terminos y servicios -->
     <p>Al <em>Registrarte</em> estas aceptando nuestros
+  
     <a href="" target="_blank">terminos y condiciones</a>
+    
 
+</form>
 
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
