--- a/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
@@ -1,35 +1,35 @@
-<footer class="text-center text-white" style="background-color:darkgrey">
+<footer class="text-center text-white">
   <div class="container-fluid">
     <section class="mt-5">
       <div class="row text-center d-flex justify-content-center pt-5">
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a class="text-black nav-link" [routerLink]="['/login']" style="text-decoration: none;">Ingresar</a>
+            <a class="text-black nav-link" [routerLink]="['/login']">Ingresar</a>
           </h6>
         </div>
 
 
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a class="text-black nav-link" [routerLink]="['/publicaciones']" style="text-decoration: none;">Publicaciones</a>
+            <a class="text-black nav-link" [routerLink]="['/']" >Productos</a>
+          </h6>
+        </div>
+
+        <!-- <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a class="text-black  nav-link" [routerLink]="['/quienessomos']" >Quienes somos</a>
+          </h6>
+        </div> -->
+
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a class="text-black nav-link" [routerLink]="['/preguntasfrecuentes']">Preguntas frecuentes</a>
           </h6>
         </div>
 
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a class="text-black  nav-link" [routerLink]="['/quienessomos']" style="text-decoration: none;">Quienes somos</a>
-          </h6>
-        </div>
-
-        <div class="col-md-2">
-          <h6 class="text-uppercase font-weight-bold">
-            <a class="text-black nav-link" [routerLink]="['/preguntasfrecuentes']"style="text-decoration: none;">Preguntas frecuentes</a>
-          </h6>
-        </div>
-
-        <div class="col-md-2">
-          <h6 class="text-uppercase font-weight-bold">
-            <a class="text-black nav-link" [routerLink]="['/tyc']" style="text-decoration: none;">Términos y condiciones</a>
+            <a class="text-black nav-link" [routerLink]="['/tyc']">Términos y condiciones</a>
           </h6>
         </div>
       </div>
@@ -51,7 +51,7 @@
     </section>
   </div>
 
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); text-size-adjust: 10px;">
+  <div class="text-center p-3" id="titulo-pie" >
     <a href=""><p></p><strong>TRU</strong>w<strong>E</strong>b<strong>QUE</strong></a>
   </div>
 </footer>
