--- a/SPA2023/Frontend/truwebque/src/app/pages/preguntas-frecuentes-component/preguntas-frecuentes-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/preguntas-frecuentes-component/preguntas-frecuentes-component.component.html
@@ -29,12 +29,11 @@
         <h5>Normas para la publicación de objetos:</h5>
                     <hr>
                     <p> No se permite la venta de productos.</p>
-                    <hr>
                     <p> No se permite el intercambio de seres vivos.</p>
-                    <hr>
+
                     <p> El usuario no podrá usar este servicio para transmitir cualquier clase de material ilegal, 
                     amenazante o cualquier otro tipo de material que pueda ser considerado ofensivo.</p>
-                    <hr>
+              
                      <p> Cualquier material que vaya en contra de los intereses de TRUwEbQUE, que constituya una ofensa criminal, 
                       viole los derechos de otros, o cualquier otro tipo de violación aplicable 
                       en su localidad, o por las leyes internacionales
@@ -43,8 +42,8 @@
                     <strong> TRUwEbQUE se reserva el derecho de dar de baja cualquier cuenta que vaya en contra de estas normas,
                     bajo su total discreción, y sin necesidad de dar ninguna razón.</strong>
                     <br>
-                    <hr>
-                    <a href="/tyco" target="_blank"></a> 
+  
+                    <a href="#" target="_blank"></a> 
                     <br>
       </div>
     </div>
@@ -57,47 +56,25 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
       <div class="accordion-body">
+        <br>
         <p><strong>¿Cómo me contacto con la otra persona para realizar el trueque?</strong></p>
     
                     Para contactarte con el otro usuario, deberás ingresar a la publicación de tu interés y presionar el botón que dice: "Truequear". 
                     En ese momento se abrirá un formulario para que realices la consulta y puedas establecer una conexión con el dueño del artículo que te interesa.<p></p>
-                    <hr>
-                    <p><strong>¿Debo pagar para suscribirme a la página?</strong></p>
-    
+                    <br>
+                    <p><strong>¿Debo pagar para suscribirme a la página?</strong></p>   
                     No. No se cobra una suscripción. Solamente te pedimos los datos de registro para que todo sea más transparente y puedas
                     realizar un intercambio de la manera más segura posible.<p></p>
-                    <hr>
+                    <br>
                     <p><strong>¿Puedo comprar un artículo en vez de intercambiar?</strong></p>
                     Dentro de la plataforma no. No dispone esta página de pasarelas de pago. La intención es solamente que puedas conectarte
                     con otras personas para realizar intercambios, sin gastar dinero.<p></p>
-                    <hr>
+                    <br>
                     <p><strong>¿Cuáles son los medios envío de los productos?</strong></p>
                     <p>envíos corren por cuenta de cada usuario, eligiendo el medio que resulte más conveniente. 
                     La plataforma no ofrece esa funcionalidad, sino que una vez que te pongas en contacto con la otra persona
                     podes buscar la mejor alternativa para enviar o recibir tu producto.</p> 
-                    <hr>
-                    <p><strong>¿Puedo ofrecer servicios a cambio de productos?</strong></p>
-                    Si, podes ofrecer tus servicios. La idea de la plataforma es que puedas contactar con gente de tus alrededores, 
-                    para ofrecer por ejemplo servicios de pintura, albañilería, tareas domésticas, etc. a cambio de un producto de tu interés.
-                    <p><strong>¿Cómo me contacto con la otra persona para realizar el trueque?</strong></p>
-    
-                    Para contactarte con el otro usuario, deberás ingresar a la publicación de tu interés y presionar el botón que dice: "Truequear". 
-                    En ese momento se abrirá un formulario para que realices la consulta y puedas establecer una conexión con el dueño del artículo que te interesa.<p></p>
-                    <hr>
-                    <p><strong>¿Debo pagar para suscribirme a la página?</strong></p>
-    
-                    No. No se cobra una suscripción. Solamente te pedimos los datos de registro para que todo sea más transparente y puedas
-                    realizar un intercambio de la manera más segura posible.<p></p>
-                    <hr>
-                    <p><strong>¿Puedo comprar un artículo en vez de intercambiar?</strong></p>
-                    Dentro de la plataforma no. No dispone esta página de pasarelas de pago. La intención es solamente que puedas conectarte
-                    con otras personas para realizar intercambios, sin gastar dinero.<p></p>
-                    <hr>
-                    <p><strong>¿Cuáles son los medios envío de los productos?</strong></p>
-                    <p>envíos corren por cuenta de cada usuario, eligiendo el medio que resulte más conveniente. 
-                    La plataforma no ofrece esa funcionalidad, sino que una vez que te pongas en contacto con la otra persona
-                    podes buscar la mejor alternativa para enviar o recibir tu producto.</p> 
-                    <hr>
+                    <br>
                     <p><strong>¿Puedo ofrecer servicios a cambio de productos?</strong></p>
                     Si, podes ofrecer tus servicios. La idea de la plataforma es que puedas contactar con gente de tus alrededores, 
                     para ofrecer por ejemplo servicios de pintura, albañilería, tareas domésticas, etc. a cambio de un producto de tu interés.
