--- a/SPA2023/Frontend/truwebque/src/app/auth/login/login.component.css
+++ b/SPA2023/Frontend/truwebque/src/app/auth/login/login.component.css
@@ -6,10 +6,10 @@
     -ms-user-select: none;
     user-select: none;
   }
-  footer{
+  /* footer{
     position: absolute;
     margin-top: 0 auto;
-  }
+  } */
 
   
   .container{
@@ -21,9 +21,10 @@
   .login-box{
     width: 400px;
     padding: 35px;
-    background-color: rgb(27, 175, 212);
+    /* background-color: rgb(27, 175, 212); */
+    background-color: #1d1d1de7;
     border-radius: 10px;
-    box-shadow: 0 0 12px #585858;
+    box-shadow: 0 0 12px #003503a6;
   }
   .login-box h2{
     margin: 0 0 30px;
@@ -39,7 +40,7 @@
     color: #fff;
     margin-bottom: 30px;
     border: none;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #fdb211;
     outline: none;
     background: transparent;
 
@@ -48,7 +49,7 @@
 
   #submit{
     padding: 10px 20px;
-    color: rgb(255, 255, 255);
+    color: #fdb211;
     font-size: 16px;
     letter-spacing: 4px;
     text-decoration: none;
