Router link terminado en footer. Se agregó el enlace a productos al igual que en el menu

--- a/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/footer-component/footer-component.component.html
@@ -11,7 +11,7 @@
 
         <div class="col-md-2">
           <h6 class="text-uppercase font-weight-bold">
-            <a class="text-black nav-link" [routerLink]="['/']" >Productos</a>
+            <a class="text-black nav-link" [routerLink]="['/shop']" >Productos</a>
           </h6>
         </div>
 
