--- a/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/']"> Productos</a>
+            <a class="nav-link" [routerLink]="['/shop']"> Productos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/login']">Ingresar</a>
