--- a/SPA2023/Frontend/truwebque/src/app/pages/home-component/home-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/home-component/home-component.component.html
@@ -79,52 +79,49 @@
 
 <hr class="featurette-divider">
   
-        <div class="row featurette">
-          <div class="col-md-7 d-flex align-items-center justify-content-center flex-column " div style="text-align: center;" >
-            <h2 class="featurette-heading">No tires lo que ya no te sirve<span class="text-muted">.</span></h2>
-            <p class="lead">No tires lo que ya no te sirve Si tenes objetos que solo ocupan lugar en tu hogar y no sabes qué hacer con ellos, desde
-              TRUwEbQUE te hacemos saber que hay miles de Argentinos que seguramente serían felices con ellos en su poder.
-            </p>
-          </div>
-          <div class="col-md-5">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" 
-              src="../../assets/trueque3.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
-              aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
-            <title>Placeholder</title>
-          </div>
-        </div>
-  
-        <hr class="featurette-divider">
-  
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2 d-flex align-items-center justify-content-center flex-column" div style="text-align: center;">
-            <h2 class="featurette-heading">Intercambia todo aquello que no usas<span class="text-muted">.</span></h2>
-            <p class="lead">No solo lograrás hacer más espacio en tu hogar, sino que como recompensa podrás obtener algún
-              otro elemento o servicio de tu interés. Sin gastar dinero, y ayudando a nuestro medio ambiente!</p>
-          </div>
-          <div class="col-md-5 order-md-1">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              src="../../assets/trueque1.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
-              aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
-            <title>Placeholder</title>
-  
+        <div class="container">
+          <div class="row featurette">
+            <div class="col-md-7 d-flex align-items-center justify-content-center flex-column text-center">
+              <h2 class="featurette-heading">No tires lo que ya no te sirve<span class="text-muted">.</span></h2>
+              <p class="lead">Si tienes objetos que solo ocupan lugar en tu hogar y no sabes qué hacer con ellos, desde TRUwEbQUE te hacemos saber que hay miles de argentinos que seguramente serían felices con ellos en su poder.</p>
+            </div>
+            <div class="col-md-5 d-flex align-items-center">
+              <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" 
+                src="../../assets/trueque3.png" width="500" height="500" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
+              <title>Placeholder</title>
+            </div>
           </div>
         </div>
   
         <hr class="featurette-divider">
-  
-        <div class="row featurette">
-          <div class="col-md-7 d-flex align-items-center justify-content-center flex-column" div style="text-align: center;">
-            <h2 class="featurette-heading">Conectate con el mundo del trueque<span class="text-muted">.</span></h2>
-            <p class="lead">Conocerás gente nueva, de tu zona, o de otros lugares del país. Esto te permitirá crear una
-              red de nuevos contactos con los que poder intercambiar más elementos en un futuro.</p>
+
+        <div class="container">
+          <div class="row featurette">
+            <div class="col-md-7 order-md-2 d-flex align-items-center justify-content-center flex-column text-center">
+              <h2 class="featurette-heading">Intercambia todo aquello que no usas<span class="text-muted">.</span></h2>
+              <p class="lead">No solo lograrás hacer más espacio en tu hogar, sino que como recompensa podrás obtener algún otro elemento o servicio de tu interés. Sin gastar dinero, y ayudando a nuestro medio ambiente!</p>
+            </div>
+            <div class="col-md-5 order-md-1 d-flex align-items-center">
+              <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" 
+                src="../../assets/trueque1.png" width="500" height="500" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
+              <title>Placeholder</title>
+            </div>
           </div>
-          <div class="col-md-5">
-            <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              src="../../assets/trueque2.png" width="500" height="500" xmlns="http://www.w3.org/2000/svg"
-              aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
-            <title>Placeholder</title>
+        </div>
+
+        <hr class="featurette-divider">
   
+        <div class="container">
+          <div class="row featurette">
+            <div class="col-md-7 d-flex align-items-center justify-content-center flex-column text-center">
+              <h2 class="featurette-heading">Conéctate con el mundo del trueque<span class="text-muted">.</span></h2>
+              <p class="lead">Conocerás gente nueva, de tu zona, o de otros lugares del país. Esto te permitirá crear una red de nuevos contactos con los que poder intercambiar más elementos en un futuro.</p>
+            </div>
+            <div class="col-md-5 d-flex align-items-center">
+              <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" 
+                src="../../assets/trueque2.png" width="500" height="500" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" role="img">
+              <title>Placeholder</title>
+            </div>
           </div>
         </div>
   
