Corrección de carrousel para que no se deforme la imagen, y agrego líneas y flechas para desplazarse

--- a/SPA2023/Frontend/truwebque/src/app/pages/carrusel-component/carrusel-component.component.css
+++ b/SPA2023/Frontend/truwebque/src/app/pages/carrusel-component/carrusel-component.component.css
@@ -1,2 +1,20 @@
+.carousel-image {
+    object-fit: contain;
+    max-height: 100%;
+  }
 
+.carousel-indicators li {
+    background-color: gray;
+  }
   
+.carousel-indicators .active {
+    background-color: black;
+  }
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    filter: invert(100%);
+  }
+
+.carousel-control-prev, .carousel-control-next {
+    color: black;
+  }
