--- a/SPA2023/Frontend/truwebque/src/app/pages/carrusel-component/carrusel-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/carrusel-component/carrusel-component.component.html
@@ -9,13 +9,13 @@
   <!-- Slides -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="../../../assets/LOGO.png" alt="Slide 1">
+      <img class="d-block w-100 carousel-image" src="../../../assets/LOGO.png" alt="Slide 1">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../../../assets/ECONOMIA.png" alt="Slide 2">
+      <img class="d-block w-100 carousel-image" src="../../../assets/ECONOMIA.png" alt="Slide 2">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../../../assets/INTERCAMBIO.png" alt="Slide 3">
+      <img class="d-block w-100 carousel-image" src="../../../assets/INTERCAMBIO.png" alt="Slide 3">
     </div>
   </div>
 
