--- a/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.html
@@ -6,27 +6,18 @@
     <div class="form-row mb-4" id="linea">
       <div class="col-md-6">
         <!-- usuario -->
-        <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="Usuario" required>
+        <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="Nombre" required>
       </div>
 
       <div class="col-md-6">
         <!-- nombre -->
-        <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Nombre" required>
+        <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Apellido" required>
       </div>
 
     </div>
 
-
-    <!-- <div class="form-row mb-5">
-      <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="Usuario" required>
-      <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Nombre" required>
-      
-
-    </div> -->
-         
-
     <!-- mail -->
-    <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail" required>
+    <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="Correo" required>
     <!-- Password-->
     <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password"
       aria-describedby="defaultRegisterFormPasswordHelpBlock" required>
