suscribe y payment components created

--- a/SPA2023/Frontend/truwebque/src/app/app.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-header-component></app-header-component>
   <router-outlet></router-outlet>
-  <app-footer-component></app-footer-component>
+<!--  <app-footer-component></app-footer-component>-->
 
 
 </div>
