--- a/SPA2023/Frontend/truwebque/src/app/shop/component/product-form/product-form.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/product-form/product-form.component.html
@@ -1,15 +1,23 @@
 <div class="container pr-5">
   <h1 class="text-center">Carga de producto y/o servicio</h1>
   <div class="container px-3 py-2 bordes">
-    <form>
+    <form [formGroup]="form" >
       <div class="form-group">
         <label for="title">titulo</label>
-        <input type="text" class="form-control" />
+        <input type="text" class="form-control"
+        formControlName="title" required>
+        <div class="row" *ngIf="titleControl.invalid && (titleControl.dirty || titleControl.touched)">
+          <p class="col error" *ngIf="titleControl.errors?.['minlength']">Minimo 4 caracteres</p>
+          <p class="col error" *ngIf="titleControl.errors?.['maxlength']">Maximo 25 caracteres</p>
+          <p class="col error" *ngIf="titleControl.errors?.['required']">Campo requerido</p>
+        </div>
+
+
       </div>
 
       <div class="mb-3">
-        <label for="description" class="form-label">Descripcion</label>
-        <textarea class="form-control" id="description" rows="3"></textarea>
+        <label for="description" class="form-label" >Descripcion</label>
+        <textarea class="form-control" id="description" rows="3" formControlName="description"></textarea>
       </div>
 
       <div class="mb-3">
@@ -19,22 +27,25 @@
 
       <div class="form-group">
         <label for="precio">precio</label>
-        <input type="text" class="form-control" />
+        <input type="number" class="form-control" formControlName="price" placeholder="$0.00"/>
       </div>
 
       <div class="form-group">
         <label for="cantidad">cantidad</label>
-        <input type="text" class="form-control" />
+        <input type="number" class="form-control" formControlName="quantity" required/>
+      </div>
+      <div class="row" *ngIf="quantityControl.invalid && (quantityControl.dirty || quantityControl.touched)">
+        <p class="col error" *ngIf="quantityControl.errors?.['required']">Campo requerido</p>
       </div>
 
       <div class="form-group">
         <label for="preferencias">preferencias</label>
-        <input type="text" class="form-control" />
+        <input type="text" class="form-control" formControlName="preferences"/>
       </div>
 
       <div class="form-group">
         <label for="category">categoria</label>
-        <input type="text" class="form-control" />
+        <input type="text" class="form-control" formControlName="category"/>
       </div>
 
       <div class="form-check mt-3">
@@ -45,10 +56,12 @@
           id="readCheck"
         />
         <label class="form-check-label" for="readCheck">
-          Lei y estoy de acuerdo con las condiciones de uso de la plataforma.
+          Leí y estoy de acuerdo con las condiciones de uso de la plataforma.
         </label>
       </div>
-      <button type="submit" class="mt-3">Agregar</button>
+      <button [disabled]="form.invalid" type="submit" (click)="addProduct()" class="mt-3">Agregar</button>
     </form>
   </div>
 </div>
+
+<pre> {{form.value | json}}</pre>
